# Wooting-Profile-Switcher

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  LICENSE  README.md  Tauri.toml  example_config.json  rustfmt.toml  tauri.conf.json
.github/workflows/: release.yml
icons/: icon.icns
linux/: Makefile
mac/: Info.plist  Makefile  WootingProfileSwitcher.icns
src/: app.rs  config.rs  lib.rs  linux.c  linux.h  mac.c  mac.h  mac.m  macos.c  macos.h  main.c  main.h  main.rs  theme.rs  win_native.c  win_native.h  windows.c  windows.h  wootility.rs
windows/: Makefile
windows/include/wooting-rgb-sdk/: wooting-rgb-sdk.h  wooting-usb.h
windows/include/x86/wooting-rgb-sdk/: wooting-rgb-sdk.h  wooting-usb.h
windows/lib/x64/: wooting-rgb-sdk64.lib
windows/lib/x86/: wooting-rgb-sdk.lib
