[package]
name = "wooting-profile-switcher"
description = "Wooting Profile Switcher"
version = "2.4.0"
authors = ["Shayne Hartford <shaybox@shaybox.com>", "Tony Langhammer"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/ShayBox/Wooting-Profile-Switcher"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { git = "https://github.com/tauri-apps/tauri", rev = "bd29b05", features = ["config-toml"] }

[dependencies]
active-win-pos-rs = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = { version = "3", features = ["termination"] }
derive_more = { version = "1", features = ["full"] }
dirs = "5"
egui_extras = "=0.22"
encoding_rs = "0.8"
game-scanner = { git = "https://github.com/Shays-Forks/game-scanner.git" }
image = "0.25"
lazy_static = "1"
open = "5"
parking_lot = "0.12"
regex = "1"
rusty-leveldb = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["json"] }
structstruck = "0.4"
strum = { version = "0.26", features = ["derive"] }
tauri = { git = "https://github.com/tauri-apps/tauri", rev = "bd29b05", features = ["system-tray"] }
tauri-egui = { git = "https://github.com/Shays-Forks/tauri-egui", branch = "0.22" }
tauri-plugin-autostart = { git = "https://github.com/Shays-Forks/plugins-workspace" }
tauri-plugin-single-instance = { git = "https://github.com/Shays-Forks/plugins-workspace" }
tauri-plugin-updater = { git = "https://github.com/Shays-Forks/plugins-workspace" }
tauri-utils = { git = "https://github.com/tauri-apps/tauri", rev = "bd29b05" }
wildflower = "0.3"
wooting-rgb-sys = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Console"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# https://tauri.app/v1/guides/building/app-size/#rust-build-time-optimizations
[profile.release]
lto = true      # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true    # Remove debug symbols

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
missing_errors_doc = "allow"
